--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.119.0",
     "greenlet>=3.2.4",
+    "psycopg2-binary>=2.9.11",
+    "redis[hiredis]>=7.0.1",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.37.0",
 ]
